<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_list"
            android:title="@string/lista_de_fogos"/>
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/mapa_de_fogos"/>
        <item
            android:id="@+id/nav_registrar"
            android:icon="@drawable/ic_register"
            android:title="@string/registrar_fogo"/>
        <item
            android:id="@+id/nav_registros"
            android:icon="@drawable/ic_my_records"
            android:title="@string/meus_registros"/>
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/configuracoes"/>
    </group>
</menu>